# Kitan

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  deno.json  docker-build.sh  docker-compose.yml  main.py  pm2.json  pyproject.toml  requirements.txt
.github/workflow/: pages.yml
.github/workflows/: pages.yml  pages.yml.disuse
App/: Controller.py  Event.py
backend/: .env.exp  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  README.MD  app_locales.py  const.py  main.py  pm2.json  pyproject.toml
backend/bot/: controller.py  judge.py  rule.txt
backend/core/: death_queue.py  mongo.py  mongo_odm.py  policy.py  start_resend.py  statistics.py
backend/playground/: note.md  ocr_t.py
backend/server/: __init__.py  validate_cloudflare.py
backend/setting/: endpoint.py  server.py  telegrambot.py
bot/: .env.example  .gitignore  Dockerfile  LICENSE  __init__.py  box.py  locales_config.py  main.py  pm2.json
common/: configure.py  const.py  join_manager.py  middleware.py  recall.py  statistics.py
frontend/: Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
nginx/: cf.conf  nginx.conf
note/: baseline.md
playground/: agent-1.py  agent.py  baseline.md  event.py  llm.py
server/: __init__.py  pyproject.toml  validate_cloudflare.py
server/bot/: controller.py
utils/: Base.py
webapp/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
worker/: __init__.py
(+38 files in other folders)
